fix header spacing

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -7,6 +7,8 @@ sitemap: false
 
 #dhht-header {
     background-color: #0F388A;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem
 }
 
 #intro-course-header > .card-header {
